# spatialkit-ci

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  benchmark.cpp  performance_harness.cpp  performance_harness.h
renderer/include/: camera.h  mesh.h  renderer.h  scene.h  shader.h
renderer/src/: camera.cpp  main.cpp  mesh.cpp  renderer.cpp  scene.cpp  shader.cpp
scripts/: bootstrap.sh
shaders/src/: basic.frag  basic.vert
tests/unit/: CMakeLists.txt  test_camera.cpp  test_mesh.cpp  test_renderer.cpp  test_shader.cpp
tests/visual/: CMakeLists.txt  test_scenes.cpp  visual_regression.py  visual_test.cpp
tools/: shader_compiler.py
